--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -88,6 +88,13 @@
                 </li>
 
             <li class="nav-item">
+                <a class="nav-link collapsed" asp-action="Index" asp-controller="Flyer">
+                    <i class="ri-image-add-fill"></i>
+                    <span>Flyer Dashboard Website</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link collapsed" asp-action="Index" asp-controller="PengelolaWeb">
                     <i class="ri-admin-line"></i>
                     <span>Web Manager</span>
