--- a/IndustrialServices/Views/Home/DetailPelatihanTechnical.cshtml
+++ b/IndustrialServices/Views/Home/DetailPelatihanTechnical.cshtml
@@ -9,8 +9,8 @@
 <section id="hero">
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
-            <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <div id="load-header-pelatihan">
+            <p style="margin-bottom: -3px;color:darkgray;font-family: Barlow;">Industrial Services</p>
+            <div id="load-header-pelatihan" style="font-family: Barlow;">
 
             </div>
         </div>
@@ -18,10 +18,10 @@
             <div class="row g-12">
                 <div class="col-sm-6 text-white">
                     <div class="post-body">
-                    <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 20px; margin-bottom: 20px;">
+                        <h5 style="color: black; font-family: Barlow; font-weight: 600; font-size: 20px; margin-bottom: 20px;">
                         Deskripsi Pelatihan
                     </h5>
-                        @Html.Raw("<div id='load-detail-pelatihan' style='text-align:justify;'>")
+                        @Html.Raw("<div id='load-detail-pelatihan' style='text-align:justify;color:black;font-family:Barlow;'>")
                     </p>
                         </div>
                 </div>
@@ -30,7 +30,7 @@
             <div class="col-lg-6">
                 <div class="card" style="background-color: #3498db;">
                     <div class="card-body">
-                        <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Training Photos</h5>
+                        <h5 class="card-title text-white" style="padding:20px; font-family:Barlow; font-size:20px;">Training Photos</h5>
                         <div class="container-sm" id="load-photo">
 
                             <!-- Tambahkan card lainnya di sini sesuai kebutuhan -->
@@ -43,7 +43,7 @@
         <br />
         <div class="row">
             <div class="col-lg-12">
-                <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Testimonials</h5>
+                <h5 class="card-title text-black" style="padding:10px; font-family:Barlow; font-size:20px;font-weight:600;">Testimonials</h5>
                         <div class="container mt-5 mb-5">
                             <div class="row g-2" id="testimonial-container">
 
@@ -55,9 +55,10 @@
         </section>
 
 <footer id="footer" style="color:#ffffff;">
+
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Address</h3>
@@ -81,10 +82,16 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-
-                    </p>
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -99,7 +106,6 @@
 
     </div>
 </footer><!-- End Footer -->
-
 
 <script>
     loadPelatihanTechnical(); // Memuat data pelatihan saat halaman dimuat
@@ -127,8 +133,8 @@
                             // Simpan deskripsi pelatihan dalam variabel JavaScript
                             var deskripsiPelatihan = '<p style="text-align:justify;">' + pelatihan.deskripsi_pelatihan + '</p>';
 
-                            var headerRow = '<h5 style="color: rgba(255,255,255,0.4); font-family: \'Segoe UI\', Tahoma, Geneva, Verdana, sans-serif; font-weight: 300; font-size: 24px; margin-bottom: 0px;">Training - Technical - ' + tipe_pelatihan + '</h5>' +
-                                '<h6 style="color: white; font-family: \'Segoe UI\', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">' + pelatihan.nama_pelatihan + '</h6>';
+                            var headerRow = '<h5 style="color: rgba(0,0,0,0.4); font-family: Barlow; font-weight: 300; font-size: 24px; margin-bottom: 0px;">Training - Technical - ' + tipe_pelatihan + '</h5>' +
+                                '<h6 style="color: black; font-family: Barlow; font-weight: 600; font-size: 36px; margin-bottom: 20px;">' + pelatihan.nama_pelatihan + '</h6>';
 
                             $('#load-header-pelatihan').append(headerRow);
                             $('#load-detail-pelatihan').append(deskripsiPelatihan);
@@ -188,9 +194,10 @@
             url: urlTestimonies,
             method: "GET",
             success: function (data) {
+                console.log(data.data)
                 // Check if 'data' is defined and has a property named 'data'
                 var testimonials = data.data;
-                if(testimonials.length > 0) {
+                if(testimonials != null) {
 
                     testimonials.forEach(function (testimonial) {
                         // Fetch nama_pelatihan based on id_pelatihan
@@ -203,16 +210,18 @@
                                 var namaPelatihan = pelatihanData.nama_pelatihan;
 
                                 var testimonialHtml =
-                                    '<div class="col-md-3">' +
-                                    '<div class="card p-3 text-center px-4 position-relative">' +
-                                    '<div class="user-image">' +
-                                    '<img src="/assets/img/' + testimonial.foto_peserta + '" class="rounded-circle" width="80">' +
+                                '<div class="col col-md-6" style="font-family:Barlow;">' +
+                                    '<div class="card" style="border-radius: 15px; background-color: rgba(0, 0, 0, 0.2); border:none;">' +
+                                    '<div class="card-body p-4">' +
+                                    '<div class="d-flex text-black">' +
+                                    '<div class="flex-shrink-0">' +
+                                    '<img src="/assets/img/' + testimonial.foto_peserta + '" alt="Generic placeholder image" class="img-fluid" style="width: 75px; border-radius: 10px;">' +
                                     '</div>' +
-                                    '<br />' +
-                                    '<p>"' + testimonial.testimoni_peserta + '"</p>' +
-                                    '<h5 class="mb-0" style="font-weight: bold; font-family: \'Segoe UI\', Tahoma, Geneva, Verdana, sans-serif; font-size:18px;">' + testimonial.nama_peserta + '</h5>' +
-                                    '<span style="color:grey; font-size:14px; padding-bottom:10px;">' + testimonial.asal_instansi + '</span>' +
-                                    '<span style="color:grey; font-size:16px;font-weight: bold;">' + namaPelatihan + '</span>' +
+                                    '<div class="flex-grow-1 ms-3">' +
+                                    '<h5 class="mb-1" style="font-family:Barlow;">' + testimonial.nama_peserta + '</h5>' +
+                                    '<p class="mb-2" style="color: gray;font-family:Barlow;">' + testimonial.asal_instansi + '</p>' +
+                                    '<p class="mb-1" style="font-family:Barlow;color:rgba(0,0,0,1);font-size:16px;">' + testimonial.testimoni_peserta + '</p>' +
+                                    '</div>' +
                                     '</div>' +
                                     '</div>' +
                                     '</div>' +
@@ -230,9 +239,9 @@
                     // No testimonials found, append a card with label
                     var noTestimonialHtml = '<div class="row d-flex justify-center-content align-items-center">' +
                         '<div class="col-4 text-center">' +
-                        '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                        '<div class="card" style="border-radius: 15px; background-color: rgba(0, 0, 0, 0.1); border:none;">' +
                         '<div class="card-body p-4">' +
-                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No testimonials available.</p>' +
+                        '<p class="mb-2 pb-1 text-center" style="color: gray;font-family: Barlow;">No testimonials available.</p>' +
                         '</div>' +  
                         '</div>' +
                         '</div>' +
