--- a/IndustrialServices/Views/Home/FacultyMember.cshtml
+++ b/IndustrialServices/Views/Home/FacultyMember.cshtml
@@ -9,8 +9,8 @@
 <section id="hero">
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
-            <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Faculty Member</h5>
+            <p style="margin-bottom: -3px;color:darkgray;font-family:Barlow;">Industrial Services</p>
+            <h5 style="color: black;font-family:Barlow;  font-weight: 600; font-size: 36px; margin-bottom: 20px;">Faculty Member</h5>
             <div class="col-sm-1" style="position:relative;top:30px;left:1040px;">
                 <select class="form-select" name="filter" id="filter">
                     <option disabled>Sort:</option>
@@ -26,7 +26,7 @@
 
 
                         <div class="container mt-5 mb-5">
-                            <div class="row g-2">
+                            <div class="row g-12">
                                     <div class="row d-flex justify-content-center align-items-center h-100" id="technical-container">
 
 
@@ -41,9 +41,10 @@
 </section>
 
 <footer id="footer" style="color:#ffffff;">
+
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Address</h3>
@@ -67,10 +68,16 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-
-                    </p>
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -112,7 +119,7 @@
                 if (list.length > 0) {
                     list.forEach(function (pengajar, index) {
                         var newRow = '<div class="col col-md-9 col-lg-7 col-xl-5" style="padding-bottom:20px;">' +
-                            '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                            '<div class="card" style="border-radius: 15px; background-color: rgba(0, 0, 0, 0.05); border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);">' +
                             '<div class="card-body p-4">' +
                             '<div class="d-flex text-black">' +
                             '<div class="flex-shrink-0">' +
