--- a/IndustrialServices/Views/Home/Fasilitas.cshtml
+++ b/IndustrialServices/Views/Home/Fasilitas.cshtml
@@ -5,8 +5,8 @@
 <section id="hero">
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
-            <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Facilities</h5>
+            <p style="margin-bottom: -3px;color:darkgray;font-family:Barlow;">Industrial Services</p>
+            <h5 style="color: black; font-weight: 600; font-size: 36px; margin-bottom: 20px;font-family:Barlow;">Facilities</h5>
         </div>
         <div class="container-md">
             <div class="row" id="data-list">
@@ -33,9 +33,10 @@
 </section>
 
 <footer id="footer" style="color:#ffffff;">
+
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Address</h3>
@@ -59,10 +60,16 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-
-                    </p>
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -105,7 +112,7 @@
                             var cardHtml =
                                 '<div class="col-xs-12 col-sm-4">' +
                                 '<a href="/Home/DetailFasilitas?id=' + fasilitas.id_fasilitas + '"> ' +
-                                '<div class="card bg-dark text-white" style="border:none;">' +
+                                '<div class="card bg-dark text-white" style="border:none;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">' +
                                 '<img src="/assets/img/' + fasilitas.path_foto_fasilitas + '" class="card-img img-fluid" alt="' + fasilitas.nama_fasilitas + '">' +
                                 '<div class="card-img-overlay d-flex flex-column">' +
                                 '<div class="card-category" style="font-size: 16px; font-weight: bold;">' + tipe_fasilitas + '</div>' +
