--- a/IndustrialServices/Views/Home/Index.cshtml
+++ b/IndustrialServices/Views/Home/Index.cshtml
@@ -2,45 +2,34 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<br />
+<br />
 
-<section id="hero">
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" style="margin-top: 70px;">
+    <div class="carousel-inner" id="flyerImagesContainer">
+        <!-- Dynamic flyer images will be added here -->
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" style="top: 50%; transform: translateY(-50%);">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next" style="top: 50%; transform: translateY(-50%);">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+
+<section id="hero" style="padding:25px;">
     <section id="home" class="home">
-        <div class="container-fluid" id="body-page">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12 d-flex align-items-stretch">
-                        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="/assets/img/testflyer1.jpg" class="d-block w-75 mx-auto rounded" alt="Image 2">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="/assets/img/testflyer2.jpg" class="d-block w-75 mx-auto rounded" alt="Image 3">
-                                </div>
-                                <!-- Add more carousel items as needed -->
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                            <br/>
-                            <br />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        <br />
+        <br />
         <div class="container-lg">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="card" style="background-color: #3498db;">
                         <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">The Services We Provide</h5>
+                            <h5 class="card-title text-white" style="padding:20px; font-family:Barlow; font-size:20px;">The Services We Provide</h5>
                             <div class="container mt-5 mb-5">
 
                                 <div class="row g-12 justify-content-center">
@@ -77,7 +66,7 @@
                 <div class="col-lg-6">
                     <div class="card" style="background-color: #3498db;">
                         <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Our Training</h5>
+                            <h5 class="card-title text-white" style="padding:20px; font-family:Barlow; font-size:20px;">Current Training</h5>
                             <div class="container mt-5 mb-5">
                                 <div class="row g-4">
                                     <div id="sug-pelatihan">
@@ -101,14 +90,15 @@
     </section>
 </section>
 
-
+<section id="hero" style="padding:0px;background-color:rgba(0,0,0,0.05);">
+    <section id="home" class="home">
 <div class="container-lg">
     <div style="padding:40px;">
         <div class="container">
             <div class="row align-items-end mb-4 mb-md-7">
                 <div class="col-md mb-4 mb-md-0">
-                    <h2 class="fw-bolder mb-1">Article</h2>
-                    <h5  style="color:rgba(0,0,0,0.4); font-size:16px;">Latest News, Articles, and Announcements</h5>
+                            <h2 class="fw-bolder mb-1" style="font-family:Barlow;">Article</h2>
+                            <h5 style="color:rgba(0,0,0,0.4); font-size:16px;font-family:Barlow;">Latest News, Articles, and Announcements</h5>
                 </div>
             </div>
         </div>
@@ -118,40 +108,77 @@
 
     </div>
 </div>
+    </section>
+</section>
 
 
-<footer id="footer" style="color:#ffffff;">
+<section id="hero" style="padding:0px;background-color:rgba(255,255,255,0.7);">
+    <section id="home" class="home">
+        <div class="container-lg">
+            <div style="padding:15px;">
+                <div class="container">
+                    <div class="row align-items-end mb-4 mb-md-7">
+                        <div class="col-md mb-4 mb-md-0">
+                            <h2 class="fw-bolder mb-1" style="font-family:Barlow;padding-bottom:20px;">Our Major Clients</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="cm-list" class="row"></div>
+
+
+            </div>
+        </div>
+    </section>
+</section>
+
+<footer id="footer" style="color:#ffffff;font-family:Barlow;">
 
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Address</h3>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Astra Polytechnic</h3>
                     <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
-                        <p style="color:white;">
-                            Cikarang Campus <br>
-                            Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
+                        <p style="color:white;font-family:Barlow;">
+                            <strong>Cikarang Campus</strong> <br>
+                            Gaharu Street Block F3 Delta Silicon II, Cibatu,<br>
                             South Cikarang, Bekasi Regency, <br>
                             West Java 17530 <br><br>
+
+                            <strong>Sunter Campus</strong> <br>
+                            Astra International Public LLC Complex, Building B,<br>
+                            Gaya Motor Raya Street No. 8, Sunter II, <br>
+                            Jakarta 14330.<br><br>
 
                         </p>
                     </a>
                 </div>
 
-                                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Contacts</h3>
-                    <p style="color:white;">
-                        <strong>Phone:</strong><a href="https://wa.me/6285156842086" style="color: white; text-decoration: underline;" target="_blank"> +62 888 7765 9821</a><br>
-                        <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
+                                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Time of Service</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Monday - Friday (08:00 - 16:00)
                     </p>
                 </div>
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-
-                    </p>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;font-family:Barlow;">
+                            About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />  <br />
+                        </p>
+                        </a>
+                        <h3>Contacts</h3>
+                        <p style="color:white;font-family:Barlow;">
+                            Call Center : (021) 5022722 <br />
+                            WhatsApp : 085156842086 (message only) <br />
+                            Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                        </p>
+                    </div>
                 </div>
 
             </div>
@@ -159,7 +186,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 d-flex align-items-stretch text-center">
-                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
                 </div>
             </div>
         </div>
@@ -170,20 +197,6 @@
 
 
 <style>
-    .carousel-indicators li {
-        background-color: grey; /* Circle color */
-        border: 1px solid #000; /* Border color */
-        width: 100px; /* Circle diameter */
-        height: 100px; /* Circle diameter */
-        border-radius: 100%; /* Make it a circle */
-        margin: 0 5px; /* Margin between circles */
-        cursor: pointer;
-    }
-
-    .carousel-indicators .active {
-        background-color: #fff; /* Active circle color */
-    }
-
     .card::before {
         content: '';
         position: absolute;
@@ -227,7 +240,7 @@
                         year: 'numeric'
                     });
 
-                    var maxTitleLength = 75; // Set the maximum length for the title
+                    var maxTitleLength = 45; // Set the maximum length for the title
 
                     // Truncate the title if it exceeds the maximum length
                     var truncatedTitle = article.judul_artikel.length > maxTitleLength ?
@@ -239,10 +252,10 @@
                         '<a style="color:black;" class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="/Home/ArtikelDetail?id=' + article.id_artikel + '">' +
                         '<div class="card border rounded-3 sk-fade h-100">' +
                         '<div class="card-zoom position-relative rounded-bottom-0">' +
-                        '<img class="shadow-light-lg img-fluid zoom-on-hover" src="/assets/img/' + article.sampul_artikel + '"/>' +
+                        '<img class="shadow-light-lg img-fluid zoom-on-hover" src="/assets/img/' + article.sampul_artikel + '" alt="Article Image"/>' +
                         '<div class="card-footer p-3">' +
-                        '<h6 class="fw-bolder line-clamp-2 mb-0">' + truncatedTitle + '</h6>' +
-                        '<span style="color:rgba(0,0,0,0.4);font-size:14px;">' + formattedDate + '</span>' +
+                        '<h6 class="fw-bolder line-clamp-2 mb-0" style="font-family:Barlow;">' + truncatedTitle + '</h6>' +
+                        '<span class="text-muted" style="font-size:14px;font-family:Barlow;">' + formattedDate + '</span>' +
                         '</div>' +
                         '</div>' +
                         '</div>' +
@@ -311,8 +324,8 @@
                                             desk_pelatihan.substring(0, maxTitleLength) + '...' :
                                             desk_pelatihan;
                                         var newRow =
-                                            '<div class="col col-md-12" style="padding-bottom:20px;">' +
-                                            '<a href="javascript:void(0);" onclick="detailPelatihan(' + pelatihan.id_pelatihan + ');" style="text-decoration: none; color: inherit;">' +
+                                            '<div class="col col-md-12" style="padding-bottom:20px;font-family:Barlow;">' +
+                                            '<a class="pelatihan" data-id_pelatihan="' + pelatihan.id_pelatihan + '" style="text-decoration: none; color: inherit;">' +
                                             '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
                                             '<div class="card-body p-4">' +
                                             '<div class="d-flex text-black">' +
@@ -320,9 +333,9 @@
                                             '<img src="/assets/img/' + pelatihan.path_foto_pelatihan + '" alt="Generic placeholder image" class="img-fluid" style="width: 75px; border-radius: 10px;">' +
                                             '</div>' +
                                             '<div class="flex-grow-1 ms-3">' +
-                                            '<h5 class="mb-1">' + pelatihan.nama_pelatihan + '</h5>' +
-                                            '<p class="mb-2" style="color: gray;">' + tipe_pelatihan + '</p>' +
-                                            '<p class="mb-1" style="color:rgba(0,0,0,0.4);font-size:14px;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
+                                            '<h5 class="mb-1" style="font-family:Barlow;">' + pelatihan.nama_pelatihan + '</h5>' +
+                                            '<p class="mb-2" style="color: gray;font-family:Barlow;">' + tipe_pelatihan + '</p>' +
+                                            '<p class="mb-1" style="font-family:Barlow;color:rgba(0,0,0,0.4);font-size:14px;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
                                             '</div>' +
                                             '</div>' +
                                             '</div>' +
@@ -331,6 +344,10 @@
                                             '</div>';
 
                                         $('#sug-pelatihan').append(newRow);
+                                        $('.pelatihan[data-id_pelatihan="' + pelatihan.id_pelatihan + '"]').click(function () {
+                                            var id_pelatihan = $(this).data("id_pelatihan");
+                                            detailPelatihan(id_pelatihan);
+                                        });
                                     },
                                     error: function (xhr, status, error) {
                                         console.error("Error:", error);
@@ -344,11 +361,12 @@
                     });
                 } else {
                     // Tampilkan pesan atau card khusus jika tidak ada data yang ditemukan
-                    var noDataCard =
-                        '<div class="col-4 text-center">' +
+                    var noDataCard = '<div class="col col-lg-12 justify-content-center" style="padding-bottom:20px;font-family:Barlow;">' +
+                        '<div class="col-12 text-center">' +
                         '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
                         '<div class="card-body p-4">' +
-                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No data found for the selected filter.</p>' +
+                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No current training available.</p>' +
+                        '</div>' +
                         '</div>' +
                         '</div>' +
                         '</div>';
@@ -390,7 +408,67 @@
         var selectedFilter = $(this).val();
         loadTenagaPengajarTechnical(selectedFilter);
     });
+    loadFlyers();
 
+    function loadFlyers() {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetAllFlyers";
+        var method = "GET";
+
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                var container = $('#flyerImagesContainer');
+                container.empty(); // Clear existing carousel items
+
+                var flyers = data.data;
+                flyers.forEach(function (flyer, index) {
+                    var isActive = index == 0 ? 'active' : '';
+                    var imageElement = '<div class="carousel-item ' + isActive + '">' +
+                        '<img src="/assets/img/' + flyer.path_flyer + '" class="d-block w-100" alt="Flyer Image">' +
+                        '</div>';
+
+                    container.append(imageElement);
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
+
+    loadCustomerMapping();
+    function loadCustomerMapping() {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetAllCustomerMappinginHome";
+        var method = "GET";
+
+        $('#cm-list').empty();
+
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                var cmList = data.data;
+                cmList.forEach(function (cm) {
+
+
+                    var cmHtml =
+                        '<div class="col-6 col-lg-3 mb-5 mb-md-5">' +
+                        '<img src="/assets/img/' + cm.path_logo + '" width="200" height="auto" alt="Customer Mapping Image"/>' +
+                        '</div>';
+
+                    $('#cm-list').append(cmHtml);
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
 </script>
 
 
