--- a/IndustrialServices/Views/Home/KalenderTechnical.cshtml
+++ b/IndustrialServices/Views/Home/KalenderTechnical.cshtml
@@ -5,8 +5,8 @@
 <section id="hero">
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
-            <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Technicals Calendar Training</h5>
+            <p style="margin-bottom: -3px;color:darkgray;font-family:Barlow;">Industrial Services</p>
+            <h5 style="color: black; font-weight: 600; font-size: 36px; margin-bottom: 20px;font-family:Barlow;">Technicals Calendar Training</h5>
         </div>
         <div class="container-sm">
             <div class="row g-2">
@@ -59,12 +59,12 @@
                         </select>
                     </div>
                 <div class="col-sm-1" style="position: relative; top: 135px; left: 780px; font-size: 40px;">
-                    <a id="icon-link" class="text-white">
+                    <a id="icon-link" class="text-blue">
                         <i class="bi bi-list"></i>
                     </a>
                 </div>
                 <div class="col-sm-1" style="position: relative; top: 142px; left: 715px; font-size: 30px;">
-                    <a id="icon-link1" class="text-white">
+                    <a id="icon-link1" class="text-blue">
                         <i class="bi bi-grid"></i>
                     </a>
                 </div>
@@ -136,9 +136,10 @@
 </style>
 
 <footer id="footer" style="color:#ffffff;">
+
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Address</h3>
@@ -162,10 +163,16 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-
-                    </p>
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -217,9 +224,9 @@
         // Panggil fungsi loadPelatihanTechnical() saat ikon list diklik
         loadPelatihanTechnical();
 
-        // Tambahan: Tambahkan atau hapus kelas 'text-white' sesuai kebutuhan
-        $(this).addClass("text-white");
-        $("#icon-link1").removeClass("text-white");
+        // Tambahan: Tambahkan atau hapus kelas 'text-blue' sesuai kebutuhan
+        $(this).addClass("text-blue");
+        $("#icon-link1").removeClass("text-blue");
         $("#technical2-list").hide();
         $("#technical-list").show();
         $("#tipe_pelatihan").val(0);
@@ -231,9 +238,9 @@
         // Panggil fungsi loadPelatihanTechnical2() saat ikon grid diklik
         loadPelatihanTechnical2();
 
-        // Tambahan: Tambahkan atau hapus kelas 'text-white' sesuai kebutuhan
-        $(this).addClass("text-white");
-        $("#icon-link").removeClass("text-white");
+        // Tambahan: Tambahkan atau hapus kelas 'text-blue' sesuai kebutuhan
+        $(this).addClass("text-blue");
+        $("#icon-link").removeClass("text-blue");
         $("#technical2-list").show();
         $("#technical-list").hide();
             $("#tipe_pelatihan").val(0);
@@ -300,7 +307,7 @@
                                 '<p style="color: white;">' + tipe_pelatihan + '</p>' +
                                 '</div>' +
                                 '<div class="col-sm-3">' +
-                                '<i class="fa fa-chevron-right text-white" aria-hidden="true"></i>' +
+                                '<i class="fa fa-chevron-right text-blue" aria-hidden="true"></i>' +
                                 '</div>' +
                                 '</div>' +
                                 '</a>' +
@@ -311,10 +318,10 @@
 
                             var isActive = true;
 
-                            // Add or remove the 'text-white' class based on the active state
+                            // Add or remove the 'text-blue' class based on the active state
                             if (isActive) {
-                                $("#icon-link").addClass("text-white");
-                                $("#icon-link1").removeClass("text-white"); // Pastikan menghapus kelas 'text-white' jika tidak aktif
+                                $("#icon-link").addClass("text-blue");
+                                $("#icon-link1").removeClass("text-blue"); // Pastikan menghapus kelas 'text-blue' jika tidak aktif
                             }
 
                             $('#technical-list').append(newRow);
@@ -386,15 +393,15 @@
                             var cardHtml = 
                                 '<div class="col-xs-12 col-sm-4">' +
                                 '<a href="/Home/DetailPelatihanTechnical?id=' + pelatihan.id_pelatihan + '"> ' +
-                                '<div class="card bg-dark text-white" style="border:none;">' +
+                                '<div class="card bg-dark text-blue" style="border:none;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);">' +
                                 '<div class="flex-shrink-0">' +
                                 '<img src="/assets/img/' + pelatihan.path_foto_pelatihan + '" style="width: 500px;height:auto;" class="card-img img-fluid" alt="' + pelatihan.nama_pelatihan + '">' +
                                                                 '</div>' +
                                 '<div class="card-img-overlay d-flex flex-column">' +
-                                '<div class="card-category" style="font-size: 16px; font-weight: bold;">' + tipe_pelatihan + '</div>' +
+                                '<div class="card-category" style="font-size: 16px; font-weight: bold;font-family:Barlow;">' + tipe_pelatihan + '</div>' +
                                 '<div class="card-description flex-grow-1">' +
-                                '<h2 class="card-title" style="font-size: 24px; font-weight: bold;">' + pelatihan.nama_pelatihan + '</h2>' +
-                                '<p class="card-text" style="color:rgba(0,0,0,0.7);font-size: 14px;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
+                                '<h2 class="card-title" style="font-size: 24px; font-weight: bold;font-family:Barlow;">' + pelatihan.nama_pelatihan + '</h2>' +
+                                '<p class="card-text" style="color:rgba(0,0,0,0.7);font-size: 16px;font-family:Barlow;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
                                 '</div>' +
                                 '</div>' +
                                 '</div>' +
@@ -427,10 +434,10 @@
 
         // Periksa apakah salah satu filter memiliki nilai yang tidak sama dengan 0
         if (bulan != 0 || tipePelatihan != 0) {
-            if ($("#icon-link1").hasClass("text-white")) {
+            if ($("#icon-link1").hasClass("text-blue")) {
                 loadPelatihanTechnical2(tipePelatihan, bulan, filter);
             }
-            if ($("#icon-link").hasClass("text-white")) {
+            if ($("#icon-link").hasClass("text-blue")) {
             $.ajax({
                 url: 'https://localhost:7033/GetAllPelatihanTechnical',
                 type: 'GET',
@@ -463,7 +470,7 @@
                                     '<p style="color: white;">' + tipe_pelatihan + '</p>' +
                                     '</div>' +
                                     '<div class="col-sm-3">' +
-                                    '<i class="fa fa-chevron-right text-white" aria-hidden="true"></i>' +
+                                    '<i class="fa fa-chevron-right text-blue" aria-hidden="true"></i>' +
                                     '</div>' +
                                     '</div>' +
                                     '</a>' +
@@ -474,10 +481,10 @@
 
                                 var isActive = true;
 
-                                // Add or remove the 'text-white' class based on the active state
+                                // Add or remove the 'text-blue' class based on the active state
                                 if (isActive) {
-                                    $("#icon-link").addClass("text-white");
-                                    $("#icon-link1").removeClass("text-white"); // Pastikan menghapus kelas 'text-white' jika tidak aktif
+                                    $("#icon-link").addClass("text-blue");
+                                    $("#icon-link1").removeClass("text-blue"); // Pastikan menghapus kelas 'text-blue' jika tidak aktif
                                 }
 
                                 $('#technical-list').append(newRow);
@@ -509,10 +516,10 @@
 
         // Periksa apakah salah satu filter memiliki nilai yang tidak sama dengan 0
         if (bulan != 0 || tipePelatihan != 0) {
-            if ($("#icon-link1").hasClass("text-white")) {
+            if ($("#icon-link1").hasClass("text-blue")) {
                 loadPelatihanTechnical2(tipePelatihan, bulan, filter);
             }
-            if ($("#icon-link").hasClass("text-white")) {
+            if ($("#icon-link").hasClass("text-blue")) {
             $.ajax({
                 url: 'https://localhost:7033/GetAllPelatihanTechnical',
                 type: 'GET',
@@ -545,7 +552,7 @@
                                     '<p style="color: white;">' + tipe_pelatihan + '</p>' +
                                     '</div>' +
                                     '<div class="col-sm-3">' +
-                                    '<i class="fa fa-chevron-right text-white" aria-hidden="true"></i>' +
+                                    '<i class="fa fa-chevron-right text-blue" aria-hidden="true"></i>' +
                                     '</div>' +
                                     '</div>' +
                                     '</a>' +
@@ -556,10 +563,10 @@
 
                                 var isActive = true;
 
-                                // Add or remove the 'text-white' class based on the active state
+                                // Add or remove the 'text-blue' class based on the active state
                                 if (isActive) {
-                                    $("#icon-link").addClass("text-white");
-                                    $("#icon-link1").removeClass("text-white"); // Pastikan menghapus kelas 'text-white' jika tidak aktif
+                                    $("#icon-link").addClass("text-blue");
+                                    $("#icon-link1").removeClass("text-blue"); // Pastikan menghapus kelas 'text-blue' jika tidak aktif
                                 }
 
                                 $('#technical-list').append(newRow);
@@ -588,9 +595,9 @@
         // Menangani perubahan pada elemen <select> dengan ID 'filter'
         $('#filter').change(function () {
             var selectedOption = $(this).val();
-                        if ($("#icon-link").hasClass("text-white")) {
+                        if ($("#icon-link").hasClass("text-blue")) {
             sortPelatihan(selectedOption);
-                        } else if ($("#icon-link1").hasClass("text-white")) {
+                        } else if ($("#icon-link1").hasClass("text-blue")) {
                 sortPelatihan2(selectedOption);
             }
         });
