--- a/IndustrialServices/Views/Home/Pelatihan.cshtml
+++ b/IndustrialServices/Views/Home/Pelatihan.cshtml
@@ -6,7 +6,7 @@
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
             <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Trainings</h5>
+            <h5 style="color: black; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Trainings</h5>
         </div>
         <div class="container-md">
             <div class="row">
@@ -36,3 +36,56 @@
         </div>
     </section>
 </section>
+
+<footer id="footer" style="color:#ffffff;">
+
+    <div class="footer-top" style="background:#01529C;">
+        <div class="container">
+            <div class="row justify-content-center">
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Address</h3>
+                    <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
+                        <p style="color:white;">
+                            Cikarang Campus <br>
+                            Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
+                            South Cikarang, Bekasi Regency, <br>
+                            West Java 17530 <br><br>
+
+                        </p>
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;">
+                        <strong>Phone:</strong><a href="https://wa.me/6285156842086" style="color: white; text-decoration: underline;" target="_blank"> +62 888 7765 9821</a><br>
+                        <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 d-flex align-items-stretch text-center">
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</footer><!-- End Footer -->
