--- a/IndustrialServices/Views/Home/Produk.cshtml
+++ b/IndustrialServices/Views/Home/Produk.cshtml
@@ -5,8 +5,8 @@
 <section id="hero">
     <section id="home" class="home">
         <div class="container" style="padding-bottom:15px;">
-            <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
-            <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Products</h5>
+            <p style="margin-bottom: -3px;color:darkgray;font-family:Barlow;">Industrial Services</p>
+            <h5 style="color: black; font-weight: 600; font-size: 36px; margin-bottom: 20px;font-family:Barlow;">Products</h5>
         </div>
         <div class="container-md">
             <div class="row" id="data-list">
@@ -28,9 +28,11 @@
 </section>
 
 <footer id="footer" style="color:#ffffff;">
+
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
+
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Address</h3>
                     <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
@@ -39,9 +41,11 @@
                             Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
                             South Cikarang, Bekasi Regency, <br>
                             West Java 17530 <br><br>
+
                         </p>
                     </a>
                 </div>
+
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Contacts</h3>
                     <p style="color:white;">
@@ -49,12 +53,20 @@
                         <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
                     </p>
                 </div>
+
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Our Social Media</h3>
-                    <p style="color:white;">
-                        <!-- Isi dengan tautan sosial media jika diperlukan -->
-                    </p>
+                    <h3>Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />
+                                Contact
+                            </p>
+                        </a>
+                    </div>
                 </div>
+
             </div>
         </div>
         <div class="container">
@@ -64,6 +76,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </footer><!-- End Footer -->
 
@@ -93,12 +106,12 @@
                             var cardHtml =
                                 '<div class="col-xs-12 col-sm-4">' +
                                 '<a href="/Home/DetailProduk?id=' + produk.id_produk + '"> ' +
-                                '<div class="card bg-dark text-white" style="border:none;">' +
+                                '<div class="card bg-dark text-white" style="border:none;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">' +
                                 '<img src="/assets/img/' + produk.path_foto_produk + '" class="card-img img-fluid" alt="' + produk.nama_produk + '">' +
                                 '<div class="card-img-overlay d-flex flex-column">' +
-                                '<div class="card-category" style="font-size: 16px; font-weight: bold;">' + produk_type + '</div>' +
+                                '<div class="card-category" style="font-size: 16px; font-weight: bold;font-family:Barlow;">' + produk_type + '</div>' +
                                 '<div class="card-description flex-grow-1">' +
-                                '<h2 class="card-title" style="font-size: 24px; font-weight: bold;">' + produk.nama_produk + '</h2>' +
+                                '<h2 class="card-title" style="font-size: 24px; font-weight: bold;font-family:Barlow;">' + produk.nama_produk + '</h2>' +
                                 '</div>' +
                                 '</div>' +
                                 '</div>' +
