--- a/IndustrialServices/Views/Shared/_Layout.cshtml
+++ b/IndustrialServices/Views/Shared/_Layout.cshtml
@@ -10,12 +10,11 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/Content/img/AstraTech.png" rel="icon">
+    <link href="~/assets/img/AstraTechPolos.png" rel="icon">
     <link href="~/Content/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+    <link href='https://fonts.googleapis.com/css?family=Barlow' rel='stylesheet'>
     <!-- Vendor CSS Files -->
     <link href="~/Content/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="~/Content/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -48,20 +47,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header id="header" class="fixed-top" style="padding:0; padding-top:40px;">
-        <div class="container d-flex align-items-center" style="padding-bottom:15px;">
-                <img class="logo me-auto" src="/assets/img/AstraTechPolos.png" style="height: 45px; position:relative; left:-85px;top:-5px;" />
-                <h1 style="font-weight:400; font-family: Poppins, sans-serif; font-size:28px; color: #005aa9; position:relative; left:-650px;">Industrial Services</h1>
-            <h1 style="font-weight:300; font-family: Poppins, sans-serif; font-size:20px; color: #005aa9; position:relative; left:-400px;">The Best Partner in Business Development</h1>
-            <div class="search-box">
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" id="searchInput" placeholder="Search" aria-label="Search" oninput="showSuggestions()">
-                    <div id="searchSuggestions" class="suggestions"></div>
-                    <button class="btn btn-outline-primary" type="submit">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </form>
-            </div>
+    <header id="header" class="fixed-top" style="padding:0; padding-bottom:-150px;">
+        <div class="container d-flex align-items-center" >
+            <img class="logo me-auto" src="/assets/img/Logo_Politeknik Astra_FULL.png" style="height: 45px; position:relative; left:-250px;" />
+            <h1 style="font-weight:300; font-family: Poppins, sans-serif; font-size:24px; color: #005aa9; position:relative; ">The Best Partner in Business Development</h1>
+            <img class="logo me-auto" src="/assets/img/Satu Indonesia-PhotoRoom.png-PhotoRoom.png" style="height: 120px; position:relative; left: 500px;top:-5px;" />
 
 
 
@@ -69,33 +59,48 @@
         <div class="navbar shadow-sm navbar-expand-xl navbar-dark p-0" style="border: 1px solid #e0e0e0; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);   border-bottom: 1px solid #ccc;">
                 <div class="container">
                     <div class="collapse navbar-collapse">
-                    <nav id="navbar" class="navbar" style="right:-140px;">
+                    <nav id="navbar" class="navbar" style="right:-150px; font-family:Barlow; font-size:36px;">
                         <ul style="gap:20px;">
-                                <li><a class="nav-link scrollto" asp-action="Index" asp-controller="Home">Home</a></li>
-                            <li><a class="nav-link scrollto" asp-action="FacultyMember" asp-controller="Home">Faculty Member</a></li>
+                            <li><a class="nav-link scrollto" asp-action="Index" asp-controller="Home" style="font-size:16px;">Home</a></li>
+                            <li><a class="nav-link scrollto" asp-action="FacultyMember" asp-controller="Home" style="font-size:16px;">Faculty Member</a></li>
                                 <li class="dropdown">
-                                <a class="nav-link scrollto" href="#services">Department Training and Production<i class="bi bi-chevron-down"></i></a>
+                                <a class="nav-link scrollto" style="font-size:16px;">Department Training and Production<i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a asp-action="Fasilitas" asp-controller="Home">Facility</a></li>
-                                    <li><a asp-action="Produk" asp-controller="Home">Products</a></li>
+                                    <li><a asp-action="Fasilitas" asp-controller="Home" style="font-size:16px;">Facility</a></li>
+                                    <li><a asp-action="Produk" asp-controller="Home" style="font-size:16px;">Products</a></li>
                                     <li class="dropdown">
-                                        <a class="nav-link scrollto o" href="#portfolio">Training<i class="bi bi-chevron-down"></i></a>
+                                        <a class="nav-link scrollto o" href="#portfolio" style="font-size:16px;">Training<i class="bi bi-chevron-down"></i></a>
                                         <ul>
-                                            <li><a asp-action="KalenderTechnical" asp-controller="Home">Technical</a></li>
-                                            <li><a asp-action="KalenderNonTechnical" asp-controller="Home">Non-Technical</a></li>
+                                            <li><a asp-action="KalenderTechnical" asp-controller="Home" style="font-size:16px;">Technical</a></li>
+                                            <li><a asp-action="KalenderNonTechnical" asp-controller="Home" style="font-size:16px;">Non-Technical</a></li>
                                         </ul>
                                     </li>
                                     </ul>
                                 </li>
                             <li class="dropdown">
-                                <a class="nav-link scrollto o" href="#portfolio">Training Calendar<i class="bi bi-chevron-down"></i></a>
+                                <a class="nav-link scrollto o" style="font-size:16px;">Training Calendar<i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a asp-action="KalenderTechnical" asp-controller="Home">Technical</a></li>
-                                    <li><a asp-action="KalenderNonTechnical" asp-controller="Home">Non-Technical</a></li>
+                                    <li><a asp-action="KalenderTechnical" asp-controller="Home" style="font-size:16px;">Technical</a></li>
+                                    <li><a asp-action="KalenderNonTechnical" asp-controller="Home" style="font-size:16px;">Non-Technical</a></li>
                                 </ul>
                             </li>
-                                <li><a class="nav-link scrollto" asp-action="Artikel" asp-controller="Home">Releases</a></li>
-
+                            <li><a class="nav-link scrollto" asp-action="Artikel" asp-controller="Home" style="font-size:16px;">Releases</a></li>
+                            <li class="dropdown">
+                                <a class="nav-link scrollto o" href="#portfolio" style="font-size:16px;">About Us<i class="bi bi-chevron-down"></i></a>
+                                <ul>
+                                    <li><a href="#" style="font-size:16px;">Industrial Services</a></li>
+                                    <li><a href="#" style="font-size:16px;">Helpdesk</a></li>
+                                </ul>
+                            </li>
+                            <div class="search-box nav-link scrollto" style="position:relative;left:200px;">
+                                <form class="d-flex">
+                                    <input class="form-control me-2" id="searchInput" placeholder="Search" aria-label="Search" oninput="showSuggestions()" autocomplete="off">
+                                    <div id="searchSuggestions" class="suggestions"></div>
+                                    <button class="btn btn-outline-primary" type="submit">
+                                        <i class="bi bi-search"></i>
+                                    </button>
+                                </form>
+                            </div>
                             </ul>
                             <i class="bi bi-list mobile-nav-toggle"></i>
                         </nav>
@@ -118,12 +123,13 @@
     }
 
     .suggestions {
+        font-family: Barlow;
+        font-size:18px;
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
         background-color: #fff;
-        border: 1px solid #ccc;
         max-height: 200px;
         overflow-y: auto;
         z-index: 1000;
@@ -156,65 +162,145 @@
 <script>
     function showSuggestions() {
         var input = document.getElementById('searchInput').value.trim().toLowerCase();
-
-        // Dummy data for suggestions
-        var suggestions = [
-            { label: 'Product 1', category: 'Products' },
-            { label: 'Product 2', category: 'Products' },
-            { label: 'Product 3', category: 'Products' },
-            { label: 'Service 1', category: 'Services' },
-            { label: 'Service 2', category: 'Services' },
-            { label: 'Training 1', category: 'Training' },
-            { label: 'Training 2', category: 'Training' }
-        ];
-
-        var filteredSuggestions = suggestions.filter(function (item) {
-            return item.label.toLowerCase().includes(input);
-        });
-
         var suggestionsElement = document.getElementById('searchSuggestions');
         suggestionsElement.innerHTML = '';
 
         if (input !== '') {
-            var currentCategory = null;
+            var hostname = "https://localhost:7033/";
+            var url = hostname + "BigSearch?search=" + input;
+            var method = "GET";
 
-            filteredSuggestions.forEach(function (item) {
-                // Check if the category has changed
-                if (item.category !== currentCategory) {
-                    // Add header label for the new category
-                    var categoryHeader = document.createElement('div');
-                    categoryHeader.textContent = item.category;
-                    categoryHeader.classList.add('suggestion-category');
-                    suggestionsElement.appendChild(categoryHeader);
+            // Using AJAX to fetch suggestions from the back end
+            $.ajax({
+                url: url,
+                method: method,
+                contentType: 'application/json',
+                success: function (data) {
+                    var suggestions = data;
+                    var currentCategory = null;
 
-                    // Update current category
-                    currentCategory = item.category;
+                    suggestions.forEach(function (item) {
+                        if (item.id_artikel != 0) {
+                            var categoryHeader = document.createElement('div');
+                            categoryHeader.textContent = 'Artikel';
+                            categoryHeader.classList.add('suggestion-category');
+                            suggestionsElement.appendChild(categoryHeader);
+
+                            currentCategory = item.id_artikel;
+
+                            var suggestionItem = document.createElement('div');
+                            suggestionItem.classList.add('suggestion-item');
+
+                            var imageElement = document.createElement('img');
+                            imageElement.src = '/assets/img/' + item.sampul_artikel;
+                            imageElement.alt = item.judul_artikel;
+                            imageElement.classList.add('suggestion-image');
+                            imageElement.style.width = '70px';
+                            imageElement.style.padding = '5px';
+                            suggestionItem.appendChild(imageElement);
+
+                            var maxTitleLength = 40;
+                            var truncatedTitle = item.judul_artikel.length > maxTitleLength ?
+                                item.judul_artikel.substring(0, maxTitleLength) + '...' :
+                                item.judul_artikel;
+
+                            var labelSpan = document.createElement('span');
+                            labelSpan.textContent = truncatedTitle;
+                            suggestionItem.appendChild(labelSpan);
+
+                            suggestionItem.onclick = function () {
+                                window.location.href = "/Home/ArtikelDetail?id=" + item.id_artikel;
+                            };
+
+                            suggestionsElement.appendChild(suggestionItem);
+                        }
+
+                        if (item.id_tipe_pelatihan != 0) {
+                            $.ajax({
+                                url: hostname + "GetTipePelatihan?id=" + item.id_tipe_pelatihan,
+                                method: "GET",
+                                contentType: "application/json",
+                                success: function (tipePelatihanDetails) {
+                                    var tipe_pelatihan = tipePelatihanDetails.tipe_pelatihan;
+                            var categoryHeader = document.createElement('div');
+                            categoryHeader.textContent = 'Pelatihan';
+                            categoryHeader.classList.add('suggestion-category');
+                            suggestionsElement.appendChild(categoryHeader);
+
+                            currentCategory = item.id_tipe_pelatihan;
+
+                            var suggestionItem = document.createElement('div');
+                            suggestionItem.classList.add('suggestion-item');
+
+                            var imageElement = document.createElement('img');
+                            imageElement.src = '/assets/img/' + item.path_foto_pelatihan;
+                            imageElement.alt = item.label;
+                            imageElement.classList.add('suggestion-image');
+                            imageElement.style.width = '70px';
+                                    imageElement.style.padding = '5px';
+                            suggestionItem.appendChild(imageElement);
+
+                            var labelSpan = document.createElement('span');
+                            labelSpan.textContent = item.nama_pelatihan + ' (' + tipe_pelatihan + ')';
+
+                            suggestionItem.appendChild(labelSpan);
+
+                            suggestionItem.onclick = function () {
+                                // Dummy action when suggestion is clicked
+                                alert('You selected: ' + item.label);
+                            };
+
+                            suggestionsElement.appendChild(suggestionItem);
+                            }
+                            });
+                        }
+
+                        if (item.id_tipe_fasilitas != 0) {
+                            var categoryHeader = document.createElement('div');
+                            categoryHeader.textContent = 'Fasilitas';
+                            categoryHeader.classList.add('suggestion-category');
+                            suggestionsElement.appendChild(categoryHeader);
+
+                            currentCategory = item.id_tipe_fasilitas;
+
+                            var suggestionItem = document.createElement('div');
+                            suggestionItem.classList.add('suggestion-item');
+
+                            var imageElement = document.createElement('img');
+                            imageElement.src = '/assets/img/' + item.image;
+                            imageElement.alt = item.label;
+                            imageElement.classList.add('suggestion-image');
+                            imageElement.style.width = '50px';
+                            suggestionItem.appendChild(imageElement);
+
+                            var labelSpan = document.createElement('span');
+                            labelSpan.textContent = item.nama_fasilitas;
+
+                            suggestionItem.appendChild(labelSpan);
+
+                            suggestionItem.onclick = function () {
+                                // Dummy action when suggestion is clicked
+                                alert('You selected: ' + item.label);
+                            };
+
+                            suggestionsElement.appendChild(suggestionItem);
+                        }
+                    });
+
+                    suggestionsElement.style.display = 'block';
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error:', error);
                 }
-
-                var suggestionItem = document.createElement('div');
-                suggestionItem.classList.add('suggestion-item');
-
-                // Create a span for label
-                var labelSpan = document.createElement('span');
-                labelSpan.textContent = item.label;
-
-                suggestionItem.appendChild(labelSpan);
-
-                suggestionItem.onclick = function () {
-                    // Dummy action when suggestion is clicked
-                    alert('You selected: ' + item.label);
-                };
-
-                suggestionsElement.appendChild(suggestionItem);
             });
-
-            // Display the suggestion panel
-            suggestionsElement.style.display = 'block';
         } else {
-            // Hide the suggestion panel when input is empty
             suggestionsElement.style.display = 'none';
         }
     }
+
+
+
+
 
 
 </script>
