--- a/IndustrialServices/wwwroot/Content/css/style.css
+++ b/IndustrialServices/wwwroot/Content/css/style.css
@@ -10,7 +10,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: Barlow;
   color: #444444;
 }
 
@@ -462,7 +462,7 @@ h6 {
 #hero {
     width: 100%;
     /* height: 100vh; Remove this line */
-    background-color: #005aa9;
+    background-color: #ffffff;
     position: relative;
     overflow: hidden; /* Add this line to enable scrolling */
 }
@@ -543,12 +543,12 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 75px 0;
   overflow: hidden;
 }
 
 .section-bg {
-  background-color: #f1f7fd;
+  background-color: #ffffff;
 }
 
 .section-title {
@@ -1626,7 +1626,7 @@ section {
                 font-size: 14px;
                 line-height: 24px;
                 margin-bottom: 0;
-                font-family: "Raleway", sans-serif;
+                font-family: Barlow;
                 color: #ffffff; /* Change font color to white */
             }
 
